--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     
     <script type="text/javascript" src="phaser.min.js">
 </script>
+
+    <script type="text/javascript" src="phaser.min.js">
+</script>
+
     <script type="text/javascript" src="main.js">
 </script>
+
 </head>
     
 <body>
