--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="phaser.min.js">
 </script>
 
-    <script type="text/javascript" src="phaser.min.js">
+    <script type="text/javascript" src="nadion.js">
 </script>
 
     <script type="text/javascript" src="main.js">
